feat(gin): 引入 nginx,并且优化了 dailyData 部分的 resp 清洗逻辑 (#49)
后续将引入 joki,grafna,Prometheus
