# internal/controller/daily_data/types.go
@@ -29,7 +29,45 @@ func NewDailyDataController(svc Service) *Controller {
 	return &Controller{service: svc}
 }
 
-type DailyDataList []db.DailyDatum
+type DailyDataList []DailyDatumSchema
+
+type DailyDatumSchema struct {
+	ID          int32     `json:"id" example:"1"`
+	Date        time.Time `json:"date" example:"2026-05-01"`
+	Region      int16     `json:"region" example:"1"`
+	Category    string    `json:"category" example:"住宅"`
+	LicenseNo   string    `json:"license_no" example:"温房预许字（2026）第00051号"`
+	ProjectName string    `json:"project_name" example:"臻玉园(三期)"`
+	HouseCount  int16     `json:"house_count" example:"1"`
+	Area        string    `json:"area" example:"1003.96"`
+	AvgPrice    string    `json:"avg_price" example:"14331.00"`
+}
+
+func toResponse(list []db.DailyDatum) DailyDataList {
+	var dailyDataList DailyDataList
+
+	for _, item := range list {
+		// 清洗: 只有 Valid 为 true 时才取值
+		avgPriceStr := ""
+		if item.AvgPrice.Valid {
+			avgPriceStr = item.AvgPrice.String
+		}
+
+		dailyDataList = append(dailyDataList, DailyDatumSchema{
+			ID:          item.ID,
+			Date:        item.Date,
+			Region:      item.Region,
+			Category:    item.Category,
+			LicenseNo:   item.LicenseNo,
+			ProjectName: item.ProjectName,
+			HouseCount:  item.HouseCount,
+			Area:        item.Area,
+			AvgPrice:    avgPriceStr,
+		})
+	}
+
+	return dailyDataList
+}
 
 /** ====================================================================================
  * 🏁 GetDataByDay
@@ -37,7 +75,7 @@ type DailyDataList []db.DailyDatum
  */
 
 type GetDataByDayRequest struct {
-	Date string `form:"date" binding:"required,datetime=2006-01-02"`
+	Date string `form:"date" binding:"required,datetime=2006-01-02" example:"2026-05-01"`
 }
 
 func (r *GetDataByDayRequest) toSvcInput() service.GetDataByDayInput {
@@ -53,8 +91,8 @@ func (r *GetDataByDayRequest) toSvcInput() service.GetDataByDayInput {
  */
 
 type GetDataByPeriodRequest struct {
-	Start string `form:"start" binding:"required,datetime=2006-01-02"`
-	End   string `form:"end" binding:"required,datetime=2006-01-02"`
+	Start string `form:"start" binding:"required,datetime=2006-01-02" example:"2026-05-01"`
+	End   string `form:"end" binding:"required,datetime=2006-01-02" example:"2026-05-02"`
 }
 
 func (r *GetDataByPeriodRequest) toSvcInput() (service.GetDataByPeriodInput, error) {
